--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   "author": "Andres Alcocer",
   "license": "ISC",
   "dependencies": {
+    "@datadog/browser-rum": "^4.42.2",
     "@reduxjs/toolkit": "^1.9.0",
+    "@sentry/react": "^7.55.2",
+    "@sentry/tracing": "^7.55.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
@@ -34,6 +37,7 @@
     "axios": "^1.2.0",
     "dotenv": "^16.0.3",
     "firebase": "^9.14.0",
+    "logrocket": "^4.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
