--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "serve": "^14.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@sentry/cli": "^2.5.2",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
